<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <EditText
 
    android:id="@+id/result_id"  
 
    android:layout_width="fill_parent"
 
    android:layout_height="120dp"
    android:inputType="text"/>
 
 <Button
     android:id="@+id/Btn7_id"
     android:layout_width="70dp"
     android:layout_height="60dp"
     android:layout_below="@id/result_id"
     android:text="@string/seven" 
     android:onClick="btn7Clicked"/>
 
 <Button
     android:id="@+id/Btn8_id"
     android:layout_width="70dp"
     android:layout_height="60dp"
     android:layout_below="@id/result_id"
     android:layout_toRightOf="@id/Btn7_id"  
     android:text="@string/eight" 
     android:onClick="btn8Clicked"/>
 
  <Button
      android:id="@+id/Btn9_id"
      android:layout_width="70dp"
      android:layout_height="60dp"
      android:layout_below="@id/result_id"
      android:layout_toRightOf="@id/Btn8_id"
      android:text="@string/nine" 
      android:onClick="btn9Clicked"/>
 
  <Button
      android:id="@+id/Btnclear_id"
      android:layout_width="90dp"
      android:layout_height="60dp"
      android:layout_below="@id/result_id"
      android:layout_toRightOf="@id/Btn9_id"
      android:text="@string/clear" 
      android:onClick="btnclearClicked"/>
 
  <Button
      android:id="@+id/Btn4_id"
      android:layout_width="70dp"
      android:layout_height="60dp"
      android:layout_below="@id/Btn7_id"
      android:text="@string/four" 
      android:onClick="btn4Clicked"/>

 <Button
     android:id="@+id/Btn5_id"
     android:layout_width="70dp"
     android:layout_height="60dp"
     android:layout_below="@id/Btn8_id"
     android:layout_toRightOf="@id/Btn4_id"
     android:text="@string/five" 
     android:onClick="btn5Clicked"/>

 <Button
     android:id="@+id/Btn6_id"
     android:layout_width="70dp"
     android:layout_height="60dp"
     android:layout_below="@id/Btn9_id"
     android:layout_toRightOf="@id/Btn5_id"
     android:text="@string/six" 
     android:onClick="btn6Clicked"/>
 
  <Button
      android:id="@+id/Btnplus_id"
      android:layout_width="90dp"
      android:layout_height="60dp"
      android:layout_below="@id/Btnclear_id"
      android:layout_toRightOf="@id/Btn6_id"
      android:text="@string/plus" 
      android:onClick="btnplusClicked"/>
 
  <Button
      android:id="@+id/Btn1_id"
      android:layout_width="70dp"
      android:layout_height="60dp"
      android:layout_below="@id/Btn4_id"
      android:text="@string/one" 
      android:onClick="btn1Clicked"/>

 <Button
     android:id="@+id/Btn2_id"
     android:layout_width="70dp"
     android:layout_height="60dp"
     android:layout_below="@id/Btn5_id"
     android:layout_toRightOf="@id/Btn1_id"
     android:text="@string/two" 
     android:onClick="btn2Clicked"/>

 <Button
     android:id="@+id/Btn3_id"
     android:layout_width="70dp"
     android:layout_height="60dp"
     android:layout_below="@id/Btn6_id"
     android:layout_toRightOf="@id/Btn2_id"
     android:text="@string/three" 
     android:onClick="btn3Clicked"/>
 
  <Button
      android:id="@+id/Btnminus_id"
      android:layout_width="90dp"
      android:layout_height="60dp"
      android:layout_below="@id/Btnplus_id"
      android:layout_toRightOf="@id/Btn3_id"
      android:text="@string/minus" 
      android:onClick="btnminusClicked"/>
 
  <Button
      android:id="@+id/Btnequal_id"
      android:layout_width="110dp"
      android:layout_height="60dp"
      android:layout_below="@id/Btn1_id"
      android:text="@string/equal" 
      android:onClick="btnequalClicked"/>
 
   <Button
       android:id="@+id/Btndivide_id"
       android:layout_width="90dp"
       android:layout_height="60dp"
       android:layout_below="@id/Btn1_id"
       android:layout_toRightOf="@id/Btnequal_id"
       android:text="@string/division" 
       android:onClick="btndivideClicked"/>
 
   <Button
       android:id="@+id/Btnmulti_id"
       android:layout_width="90dp"
       android:layout_height="60dp"
       android:layout_below="@id/Btnminus_id"
       android:layout_toRightOf="@id/Btndivide_id"
       android:text="@string/multiply" 
       android:onClick="btnmultiClicked"/>

</RelativeLayout>
